trunk/src/tr/fn/grammar/PufParser.java
// $ANTLR 3.1.1 src/tr/fn/grammar/Puf.g 2008-12-18 04:41:59

package tr.fn.grammar;

import tr.fn.ast.*;
import tr.fn.ast.list.*;

import java.util.Collections;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class PufParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "APP", "TUPLE", "LIST", "CALT", "NALT", "LET", "LETREC", "IF", "LAMBDA", "CASE", "DEFINE", "TLHS", "FLHS", "EXPR", "OR", "AND", "CONS", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "INT", "ID", "LESS", "GREATER", "EQUAL", "GREATEREQUAL", "LESSEQUAL", "NOTEQUAL", "WS", "NL", "ML_COMMENT", "SL_COMMENT", "'='", "';'", "'('", "','", "')'", "'let'", "'in'", "'if'", "'then'", "'else'", "'['", "']'", "'fn'", "'->'", "'letrec'", "'case'", "'of'", "'[]'"
    };
    public static final int STAR=23;
    public static final int FLHS=16;
    public static final int CASE=13;
    public static final int GREATEREQUAL=31;
    public static final int APP=4;
    public static final int ID=27;
    public static final int AND=19;
    public static final int EOF=-1;
    public static final int DEFINE=14;
    public static final int IF=11;
    public static final int NOTEQUAL=33;
    public static final int T__55=55;
    public static final int ML_COMMENT=36;
    public static final int TUPLE=5;
    public static final int LETREC=10;
    public static final int GREATER=29;
    public static final int T__51=51;
    public static final int TLHS=15;
    public static final int EXPR=17;
    public static final int SLASH=24;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int EQUAL=30;
    public static final int LESS=28;
    public static final int PLUS=21;
    public static final int NL=35;
    public static final int LAMBDA=12;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int PERCENT=25;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int CALT=7;
    public static final int INT=26;
    public static final int MINUS=22;
    public static final int LIST=6;
    public static final int NALT=8;
    public static final int WS=34;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int CONS=20;
    public static final int SL_COMMENT=37;
    public static final int OR=18;
    public static final int LESSEQUAL=32;
    public static final int LET=9;

    // delegates
    // delegators


        public PufParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PufParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PufParser.tokenNames; }
    public String getGrammarFileName() { return "src/tr/fn/grammar/Puf.g"; }


    public static class program_return extends ParserRuleReturnScope {
        public List<Declaration> v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // src/tr/fn/grammar/Puf.g:44:1: program returns [List<Declaration> v] : (d= rdecl )* EOF ;
    public final PufParser.program_return program() throws RecognitionException {
        PufParser.program_return retval = new PufParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF1=null;
        PufParser.rdecl_return d = null;


        Object EOF1_tree=null;

         List<Declaration> l = new ArrayList<Declaration>(); 
        try {
            // src/tr/fn/grammar/Puf.g:46:12: ( (d= rdecl )* EOF )
            // src/tr/fn/grammar/Puf.g:46:14: (d= rdecl )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // src/tr/fn/grammar/Puf.g:46:14: (d= rdecl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:46:15: d= rdecl
            	    {
            	    pushFollow(FOLLOW_rdecl_in_program171);
            	    d=rdecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, d.getTree());
            	     l.add((d!=null?d.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF1=(Token)match(input,EOF,FOLLOW_EOF_in_program177); 
            EOF1_tree = (Object)adaptor.create(EOF1);
            adaptor.addChild(root_0, EOF1_tree);


                           retval.v = l;
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class rdecl_return extends ParserRuleReturnScope {
        public Declaration v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rdecl"
    // src/tr/fn/grammar/Puf.g:50:1: rdecl returns [Declaration v] : f= id (arg= id )* '=' e= expr ';' ;
    public final PufParser.rdecl_return rdecl() throws RecognitionException {
        PufParser.rdecl_return retval = new PufParser.rdecl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal2=null;
        Token char_literal3=null;
        PufParser.id_return f = null;

        PufParser.id_return arg = null;

        PufParser.expr_return e = null;


        Object char_literal2_tree=null;
        Object char_literal3_tree=null;

         List<Identifier> a = new ArrayList<Identifier>(); 
        try {
            // src/tr/fn/grammar/Puf.g:52:12: (f= id (arg= id )* '=' e= expr ';' )
            // src/tr/fn/grammar/Puf.g:52:14: f= id (arg= id )* '=' e= expr ';'
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_id_in_rdecl227);
            f=id();

            state._fsp--;

            adaptor.addChild(root_0, f.getTree());
            // src/tr/fn/grammar/Puf.g:52:21: (arg= id )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:52:22: arg= id
            	    {
            	    pushFollow(FOLLOW_id_in_rdecl234);
            	    arg=id();

            	    state._fsp--;

            	    adaptor.addChild(root_0, arg.getTree());
            	     a.add((arg!=null?arg.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            char_literal2=(Token)match(input,38,FOLLOW_38_in_rdecl240); 
            char_literal2_tree = (Object)adaptor.create(char_literal2);
            adaptor.addChild(root_0, char_literal2_tree);

            pushFollow(FOLLOW_expr_in_rdecl246);
            e=expr();

            state._fsp--;

            adaptor.addChild(root_0, e.getTree());
            char_literal3=(Token)match(input,39,FOLLOW_39_in_rdecl248); 
            char_literal3_tree = (Object)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);


                           if ((e!=null?e.v:null) instanceof Simple) {
                               retval.v = new Declaration((f!=null?f.v:null), (e!=null?e.v:null));
                           } else {
                               retval.v = new Declaration((f!=null?f.v:null), new Lambda(a, (e!=null?e.v:null)));
                           }
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rdecl"

    public static class ldecl_return extends ParserRuleReturnScope {
        public Declaration v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ldecl"
    // src/tr/fn/grammar/Puf.g:60:1: ldecl returns [Declaration v] : rdecl ;
    public final PufParser.ldecl_return ldecl() throws RecognitionException {
        PufParser.ldecl_return retval = new PufParser.ldecl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PufParser.rdecl_return rdecl4 = null;



        try {
            // src/tr/fn/grammar/Puf.g:61:12: ( rdecl )
            // src/tr/fn/grammar/Puf.g:61:14: rdecl
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_rdecl_in_ldecl278);
            rdecl4=rdecl();

            state._fsp--;

            adaptor.addChild(root_0, rdecl4.getTree());
             retval.v = (rdecl4!=null?rdecl4.v:null); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ldecl"

    public static class tlhs_return extends ParserRuleReturnScope {
        public Tuple v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tlhs"
    // src/tr/fn/grammar/Puf.g:72:1: tlhs returns [Tuple v] : '(' i= id ( ',' in= id )* ')' ;
    public final PufParser.tlhs_return tlhs() throws RecognitionException {
        PufParser.tlhs_return retval = new PufParser.tlhs_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal5=null;
        Token char_literal6=null;
        Token char_literal7=null;
        PufParser.id_return i = null;

        PufParser.id_return in = null;


        Object char_literal5_tree=null;
        Object char_literal6_tree=null;
        Object char_literal7_tree=null;

         List<Identifier> a = new ArrayList<Identifier>(); 
        try {
            // src/tr/fn/grammar/Puf.g:74:12: ( '(' i= id ( ',' in= id )* ')' )
            // src/tr/fn/grammar/Puf.g:74:14: '(' i= id ( ',' in= id )* ')'
            {
            root_0 = (Object)adaptor.nil();

            char_literal5=(Token)match(input,40,FOLLOW_40_in_tlhs339); 
            char_literal5_tree = (Object)adaptor.create(char_literal5);
            adaptor.addChild(root_0, char_literal5_tree);

            pushFollow(FOLLOW_id_in_tlhs345);
            i=id();

            state._fsp--;

            adaptor.addChild(root_0, i.getTree());
             a.add((i!=null?i.v:null)); 
            // src/tr/fn/grammar/Puf.g:74:42: ( ',' in= id )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==41) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:74:43: ',' in= id
            	    {
            	    char_literal6=(Token)match(input,41,FOLLOW_41_in_tlhs350); 
            	    char_literal6_tree = (Object)adaptor.create(char_literal6);
            	    adaptor.addChild(root_0, char_literal6_tree);

            	    pushFollow(FOLLOW_id_in_tlhs356);
            	    in=id();

            	    state._fsp--;

            	    adaptor.addChild(root_0, in.getTree());
            	     a.add((in!=null?in.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            char_literal7=(Token)match(input,42,FOLLOW_42_in_tlhs362); 
            char_literal7_tree = (Object)adaptor.create(char_literal7);
            adaptor.addChild(root_0, char_literal7_tree);


                           //if (a.size() == 1) {
                           //    retval.v = a.get(0);
                           //} else {
                               retval.v = new Tuple(a);
                           //}
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tlhs"

    public static class expr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // src/tr/fn/grammar/Puf.g:82:1: expr returns [Expression v] : (e= oexpr )+ ;
    public final PufParser.expr_return expr() throws RecognitionException {
        PufParser.expr_return retval = new PufParser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PufParser.oexpr_return e = null;



         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:84:12: ( (e= oexpr )+ )
            // src/tr/fn/grammar/Puf.g:84:14: (e= oexpr )+
            {
            root_0 = (Object)adaptor.nil();

            // src/tr/fn/grammar/Puf.g:84:14: (e= oexpr )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:84:15: e= oexpr
            	    {
            	    pushFollow(FOLLOW_oexpr_in_expr414);
            	    e=oexpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, e.getTree());
            	     l.add((e!=null?e.v:null)); 

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


                           if (l.size() == 1) {
                               retval.v = l.get(0);
                           } else {
                               Expression fe = l.get(0);
                               l.remove(0);
                               retval.v = new Application(fe, l);
                           }
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class oexpr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "oexpr"
    // src/tr/fn/grammar/Puf.g:94:1: oexpr returns [Expression v] : e= aexpr ( OR e= aexpr )* ;
    public final PufParser.oexpr_return oexpr() throws RecognitionException {
        PufParser.oexpr_return retval = new PufParser.oexpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OR8=null;
        PufParser.aexpr_return e = null;


        Object OR8_tree=null;

         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:96:12: (e= aexpr ( OR e= aexpr )* )
            // src/tr/fn/grammar/Puf.g:96:14: e= aexpr ( OR e= aexpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_aexpr_in_oexpr468);
            e=aexpr();

            state._fsp--;

            adaptor.addChild(root_0, e.getTree());
             l.add((e!=null?e.v:null)); 
            // src/tr/fn/grammar/Puf.g:96:41: ( OR e= aexpr )*
            loop5:
            do {
                int alt5=2;
                alt5 = dfa5.predict(input);
                switch (alt5) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:96:42: OR e= aexpr
            	    {
            	    OR8=(Token)match(input,OR,FOLLOW_OR_in_oexpr473); 
            	    OR8_tree = (Object)adaptor.create(OR8);
            	    adaptor.addChild(root_0, OR8_tree);

            	    pushFollow(FOLLOW_aexpr_in_oexpr479);
            	    e=aexpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, e.getTree());
            	     l.add((e!=null?e.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


                            retval.v = AstUtil.makeBinaryOperator((OR8!=null?OR8.getText():null), l, true);
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "oexpr"

    public static class aexpr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "aexpr"
    // src/tr/fn/grammar/Puf.g:100:1: aexpr returns [Expression v] : e= cexpr ( AND e= cexpr )* ;
    public final PufParser.aexpr_return aexpr() throws RecognitionException {
        PufParser.aexpr_return retval = new PufParser.aexpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AND9=null;
        PufParser.cexpr_return e = null;


        Object AND9_tree=null;

         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:102:12: (e= cexpr ( AND e= cexpr )* )
            // src/tr/fn/grammar/Puf.g:102:14: e= cexpr ( AND e= cexpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_cexpr_in_aexpr534);
            e=cexpr();

            state._fsp--;

            adaptor.addChild(root_0, e.getTree());
             l.add((e!=null?e.v:null)); 
            // src/tr/fn/grammar/Puf.g:102:41: ( AND e= cexpr )*
            loop6:
            do {
                int alt6=2;
                alt6 = dfa6.predict(input);
                switch (alt6) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:102:42: AND e= cexpr
            	    {
            	    AND9=(Token)match(input,AND,FOLLOW_AND_in_aexpr539); 
            	    AND9_tree = (Object)adaptor.create(AND9);
            	    adaptor.addChild(root_0, AND9_tree);

            	    pushFollow(FOLLOW_cexpr_in_aexpr545);
            	    e=cexpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, e.getTree());
            	     l.add((e!=null?e.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


                           retval.v = AstUtil.makeBinaryOperator((AND9!=null?AND9.getText():null), l, true);
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "aexpr"

    public static class cexpr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cexpr"
    // src/tr/fn/grammar/Puf.g:106:1: cexpr returns [Expression v] : e= lexpr (c= cop e= lexpr )? ;
    public final PufParser.cexpr_return cexpr() throws RecognitionException {
        PufParser.cexpr_return retval = new PufParser.cexpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PufParser.lexpr_return e = null;

        PufParser.cop_return c = null;



         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:108:12: (e= lexpr (c= cop e= lexpr )? )
            // src/tr/fn/grammar/Puf.g:108:14: e= lexpr (c= cop e= lexpr )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_lexpr_in_cexpr600);
            e=lexpr();

            state._fsp--;

            adaptor.addChild(root_0, e.getTree());
             l.add((e!=null?e.v:null)); 
            // src/tr/fn/grammar/Puf.g:108:41: (c= cop e= lexpr )?
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // src/tr/fn/grammar/Puf.g:108:42: c= cop e= lexpr
                    {
                    pushFollow(FOLLOW_cop_in_cexpr609);
                    c=cop();

                    state._fsp--;

                    adaptor.addChild(root_0, c.getTree());
                    pushFollow(FOLLOW_lexpr_in_cexpr615);
                    e=lexpr();

                    state._fsp--;

                    adaptor.addChild(root_0, e.getTree());
                     l.add((e!=null?e.v:null)); 

                    }
                    break;

            }


                           retval.v = AstUtil.makeBinaryOperator((c!=null?input.toString(c.start,c.stop):null), l, true);
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "cexpr"

    public static class lexpr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "lexpr"
    // src/tr/fn/grammar/Puf.g:112:1: lexpr returns [Expression v] : e= pexpr ( CONS e= pexpr )* ;
    public final PufParser.lexpr_return lexpr() throws RecognitionException {
        PufParser.lexpr_return retval = new PufParser.lexpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token CONS10=null;
        PufParser.pexpr_return e = null;


        Object CONS10_tree=null;

         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:114:12: (e= pexpr ( CONS e= pexpr )* )
            // src/tr/fn/grammar/Puf.g:114:14: e= pexpr ( CONS e= pexpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_pexpr_in_lexpr670);
            e=pexpr();

            state._fsp--;

            adaptor.addChild(root_0, e.getTree());
             l.add((e!=null?e.v:null)); 
            // src/tr/fn/grammar/Puf.g:114:41: ( CONS e= pexpr )*
            loop8:
            do {
                int alt8=2;
                alt8 = dfa8.predict(input);
                switch (alt8) {
            	case 1 :
            	    // src/tr/fn/grammar/Puf.g:114:42: CONS e= pexpr
            	    {
            	    CONS10=(Token)match(input,CONS,FOLLOW_CONS_in_lexpr675); 
            	    CONS10_tree = (Object)adaptor.create(CONS10);
            	    adaptor.addChild(root_0, CONS10_tree);

            	    pushFollow(FOLLOW_pexpr_in_lexpr681);
            	    e=pexpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, e.getTree());
            	     l.add((e!=null?e.v:null)); 

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


                           retval.v = AstUtil.makeHeadTailList(l);
                       

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "lexpr"

    public static class pexpr_return extends ParserRuleReturnScope {
        public Expression v;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pexpr"
    // src/tr/fn/grammar/Puf.g:118:1: pexpr returns [Expression v] : e= mexpr (o= ( PLUS | MINUS ) e= mexpr )* ;
    public final PufParser.pexpr_return pexpr() throws RecognitionException {
        PufParser.pexpr_return retval = new PufParser.pexpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token o=null;
        PufParser.mexpr_return e = null;


        Object o_tree=null;

         List<Expression> l = new ArrayList<Expression>(); 
        try {
            // src/tr/fn/grammar/Puf.g:120:12: (e= mexpr (o= ( PLUS | MINUS ) e= mexpr )* )
            // src/tr/fn/grammar/Puf.g:120:14: e= mexpr (o= ( PLUS | MINUS ) e= mexpr )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_mexpr_in_pexpr736);
            e=mexpr();

            state._fsp--;
